# ControlMI_PMIK

./: .gdbinit  .gitattributes  .gitignore  ARM.cmake  CMakeLists.txt  ControlMI_PMIK.elf  ControlMI_PMIK.ioc  STM32F303ZETx_FLASH.ld
Documentation/: config
Documentation/html/: _a_d_c_handler_8h.html  _a_d_c_handler_8h_source.html  _m_i_d_i___consts_8hpp_source.html  _m_p_u6050_8h.html  _m_p_u6050_8h_source.html  _menu_8h.html  _menu_8h_source.html  _pads_state_handling_8h.html  _pads_state_handling_8h_source.html  _s_s_d1306_8h.html  _s_s_d1306_8h_source.html  _s_w_o_8h.html  _s_w_o_8h_source.html  _w_s2812_8h.html  _w_s2812_8h_source.html  annotated.html  classes.html  dir_413f4e031a85da0d68269c6fd2f76e1c.html  dir_f93dfce691d792349f1c14ede440e2e6.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  group___c_m_s_i_s.html  group___s_t_m32___u_s_b___o_t_g___d_e_v_i_c_e___l_i_b_r_a_r_y.html  group___s_t_m32_f3xx___system___private___defines.html  group___s_t_m32_f3xx___system___private___function_prototypes.html  group___s_t_m32_f3xx___system___private___functions.html  group___s_t_m32_f3xx___system___private___includes.html  group___s_t_m32_f3xx___system___private___macros.html  group___s_t_m32_f3xx___system___private___types_definitions.html  group___s_t_m32_f3xx___system___private___variables.html  group___u_s_b___d_e_s_c.html  group___u_s_b___d_e_s_c___exported___defines.html  group___u_s_b_d___c_o_n_f.html  group___u_s_b_d___c_o_n_f___exported___defines.html  group___u_s_b_d___c_o_n_f___exported___functions_prototype.html  group___u_s_b_d___c_o_n_f___exported___macros.html  group___u_s_b_d___c_o_n_f___exported___types.html  (+35 more)
Documentation/html/search/: all_1.js  all_3.js  all_4.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+5 more)
Inc/: ADCHandler.h  MIDI_Consts.hpp  MPU6050.h  Menu.h  PadsStateHandling.h  SSD1306.h  SWO.h  WS2812.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  usbd_conf.h  usbd_midi_if.h
RemoteScript/: ControlMI.py  __init__.py  consts.py
Src/: ADCHandler.c  MPU6050.c  Menu.c  PadsStateHandling.c  PadsStateHandling.h  SSD1306.c  SWO.c  WS2812.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  usb_device.c  usbd_conf.c  usbd_desc.c  usbd_midi_if.c
(+2 files in other folders)
